--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=databaseconnectiontest
+spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
+spring.datasource.username=berkay
+spring.datasource.password=seda
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
